--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -10,6 +10,7 @@ nav {
 
   &.mobile-menu-visible {
     padding-bottom: 0;
+    position: fixed;
   }
 
   .logo-container {
